---------------------------------------------------------------------------------------------------
Version: 5.3.10
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 5.3.9
Date: 2020-12-15
  Bugfixes:
    - Fixed crash when starting a game from custom scenario that used an older version of the mod
---------------------------------------------------------------------------------------------------
Version: 5.3.8
Date: 2020-12-09
  Changes:
    - Added two new commands:
        /at_compress - Removes empty rows in the logistics configuratuon gui
        /at_insert_row <number> - Add an empty row after row #<number>, e.g. /at_insert_row 2 - Inserts an empty row after row #2
        For these commands a row is always 10 slots, regardless of the "Columns to display" mod setting
    - Removed blue as a status indicator: Yellow button background means items are being delivered, red means no items are available/being delivered
    - Minor changes to scrollbars to prevent the width of the gui changing
  Bugfixes:
    - Fixed crash when removing a preset via Spidertron and resaving it with the same name
---------------------------------------------------------------------------------------------------
Version: 5.3.7
Date: 2020-12-06
  Bugfixes:
    - Fixed crash with invalid status display
---------------------------------------------------------------------------------------------------
Version: 5.3.6
Date: 2020-12-02
  Bugfixes:
    - Fixed crash when importing presets via blueprint string
---------------------------------------------------------------------------------------------------
Version: 5.3.5
Date: 2020-11-30
  Changes:
    - Added a "Trash unrequested" button to the spidertron gui:
        It will set every unrequested item to a maximum amount of 0 in the spidertrons logistics tab.
    - If requested amount and maximum amount are the same, only one number is shown in the gui