@@ -31,7 +31,8 @@ clear-trash=Clear trash
 clear-both=Clear both
 trash-to-requests=Set trash to requests
 requests-to-trash=Set requests to trash
-import-from-inventory=Import from inventory
+import-requests=Load from personal logistics
+import-from-inventory=Load from inventory
 tooltip-add-network=Add current to main networks
 tooltip-remove-network=Remove current from main networks
 tooltip-edit-networks=Edit networks
