@@ -2,6 +2,7 @@
 Version: 5.3.10
 Date: ????
   Changes:
+    - Added a quick action to import the config from the logistics tab
 ---------------------------------------------------------------------------------------------------
 Version: 5.3.9
 Date: 2020-12-15
